# hyppo

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  full_experiment.py  mkdocs.yml  norne_battery.py  norne_battery_results.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/coa/: DFS.py  MathMLParser.py  coa_constructor.py
core/comparison/: compare_models.py
core/core/: artefacts.py
core/hypothesis_lattice_constructor/: HypothesisConnection.py
core/metadata_repository/: Dockerfile  metadata_repository.py
core/ve_manager/: virtual_experiment_manager.py
docs/: architecture.en.md  architecture.md  gui_demo_spec.en.md  gui_demo_spec.md  index.md
docs/api/: actions.en.md  actions.md  adapters.en.md  adapters.md  coa.md  comparison.en.md  comparison.md  core.md  generator.md  gui.md  lattice_constructor.md  manager.en.md  manager.md  mcp.md  metadata_repository.md  ontology.md  planner.md  runner.en.md  runner.md  storage.md  versioning.md
docs/rid/: listing.md  referat.md
examples/: README.md  all_rules.py  all_rules_16.py  benchmark_341.py  benchmark_rl_scaling.py  benchmark_rl_scaling_reps.py  brugge_demo.py  brugge_reuse_timing.py  coa_example.py  norne_alg1_lattice.py  norne_markers_real.py  norne_primer.py  three_layers_v2.py  volve_run.py
examples/functional_connectivity/: README.md  _hcp_brain.py  custom_gp.py  extract_ROI.py  get_functions.py  main.py
examples/random_structures/: README.md  __init__.py  main.py
examples/research/: README.md
experiments/: README.md
experiments/chapter4/: bgm_cascade.py  hcp_cascade.py  synthetic_ab.py  synthetic_honest.py  synthetic_sweep.py
experiments/iip2026/: README.md
hyppo/: __init__.py
hyppo/actions/: __init__.py  diff.py  registry.py  types.py  version.py  virtual_experiment.py
hyppo/adapters/: __init__.py  norne_adapter.py  wfopt_adapter.py
hyppo/coa/: DFS.py  __init__.py  _base.py  causal.py  coa_constructor.py  graph.py  main.py  utils.py
hyppo/comparison/: __init__.py  compare.py  compare_models.py
hyppo/core/: __init__.py  _base.py  _classes.py  _configuration.py  _epistemic.py  _hcp_brain.py  _hypothesis.py  _types.py  _virtual_experiment.py  _workflow.py  core.py
hyppo/generator/: __init__.py  _generator.py  _gp.py
hyppo/gui/: __init__.py  app.py  cli.py  demo.py  projects.py  real_data.json  schemas.py  services.py  ws.py
hyppo/lattice_constructor/: _base.py  test_lattice_constructor.py
hyppo/manager/: __init__.py  _base.py  virtual_experiment_manager.py
hyppo/mcp/: __init__.py  __main__.py  _db.py  cli.py  resources.py  server.py  tools.py  version_store.py  wfdb_client.py
hyppo/metadata_repository/: __init__.py  init-user-db.sh  metadata_repository.py  shared_cache.py
hyppo/ontology/: __init__.py  consistency.py  core_rules.py  lifecycle.py  markers.py  model_compatibility.py  multi_experiment.py  oil_constraints.py  provenance.py  quality_gates.py  quality_gates_qa.py  workflow_validation.py
hyppo/personas/: __init__.py  lattice_steward.md
hyppo/planner/: __init__.py  _base.py  planner.py
hyppo/runner/: __init__.py  _base.py
hyppo/storage/: __init__.py  _base.py
hyppo/streamlit/: __init__.py  view.py
hyppo/versioning/: __init__.py  _db.py  version_store.py
notebooks/: test.ipynb
scripts/: gui_real_data.py
tests/: conftest.py  test_action_build_virtual_experiment.py  test_action_diff_hypothesis_states.py  test_action_get_hypothesis_lattice.py  test_action_get_version.py  test_action_list_versions.py  test_action_mark_run.py  test_action_register_version.py  test_action_registry.py  test_action_resolve_stale.py  test_algorithm1_scaling.py  test_causal.py  test_coa.py  test_comparison.py  test_core.py  test_epistemic.py  test_generator.py  test_golden_claims.py  test_graph.py  test_lattice.py  test_manager.py  test_markers.py  test_mcp_cli.py  test_mcp_resources.py  test_mcp_server_factory.py  test_oil_adapter.py  test_owl_reasoning.py  test_owlrl_fallback.py  test_package_imports.py  test_packaging.py  test_petro_reuse_golden.py  test_plan_agreement.py  test_planner.py  test_quality_gates_qa.py  test_repository.py  test_runner.py  test_storage.py  test_synthetic_honest_cascade.py  test_version_store_contract.py  test_version_store_integration.py  (+4 more)
tests/fixtures/: synthetic_field.py
tests/gui/: test_api_comparison.py  test_api_graph_plan.py  test_api_hypotheses.py  test_api_projects.py  test_api_real.py  (+8 more)
webui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+155 files in other folders)
