[project]
name = "hyppo"
version = "1.1.0"
description = "Hypothesis Platform for Virtual Experiments (Hyppo)"
requires-python = ">=3.13"
dependencies = [
    "owlready2>=0.46",
    "networkx>=3.0",
    "numpy>=2.0",
    "scipy>=1.14",
    "sympy>=1.13",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "pydantic>=2.0",
    "sqlalchemy>=2.0,<3",
    "wfdb",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "pytest-asyncio>=0.24", "mcp>=1.0,<2.0", "uvicorn>=0.30", "starlette>=0.37", "httpx>=0.27"]
gp = ["deap>=1.4"]
coa = ["graphviz>=0.20"]
mcp = ["mcp>=1.0,<2.0", "uvicorn>=0.30", "starlette>=0.37"]

[project.scripts]
hyppo-mcp = "hyppo.mcp.cli:main"

[tool.setuptools.packages.find]
include = ["hyppo*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "matplotlib>=3.10.9",
    "pytest-forked>=1.6.0",
]

[tool.setuptools.package-data]
hyppo = ["personas/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
wfdb = { path = "../../wfdb", editable = true }
