[project]
name = "gedanken"
dynamic = ["version"]
description = "Hypothesis Platform for Virtual Experiments (Hyppo)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dmitry Kovalev", email = "backtoreal911@gmail.com" },
]
keywords = ["hypothesis", "virtual-experiment", "causal-inference", "lattice", "dissertation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "owlready2>=0.46",
    "networkx>=3.0",
    "numpy>=2.0",
    "scipy>=1.14",
    "sympy>=1.13",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "pydantic>=2.0",
    "sqlalchemy>=2.0,<3",
    "cloudpickle>=3.0",
]

[project.urls]
Homepage = "https://github.com/dmkovalev/hyppo-ref"
Repository = "https://github.com/dmkovalev/hyppo-ref"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio>=0.24",
    "pytest-forked>=1.6.0",
    "mcp>=1.0,<2.0",
    "uvicorn>=0.30",
    "starlette>=0.37",
    "httpx>=0.27",
    "aiosqlite>=0.22.1",
    "matplotlib>=3.10.9",
]
gp = ["deap>=1.4"]
coa = ["graphviz>=0.20"]
mcp = ["mcp>=1.0,<2.0", "uvicorn>=0.30", "starlette>=0.37"]
gui = ["fastapi>=0.110", "uvicorn>=0.30", "websockets>=12", "httpx>=0.27"]
data = ["pywaterflood>=0.3"]  # реальные CRM-данные для GUI (scripts/gui_real_data.py)
docs = ["mkdocs-material", "mkdocstrings[python]"]

[project.scripts]
hyppo-mcp = "hyppo.mcp.cli:main"
hyppo-gui = "hyppo.gui.cli:main"

[tool.setuptools.packages.find]
include = ["hyppo*"]

[tool.setuptools.dynamic]
version = { attr = "hyppo.__version__" }

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
hyppo = ["personas/*.md", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["reasoner: slow tests that launch the HermiT reasoner (Java)"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = "hyppo.ontology.*"
disable_error_code = ["misc", "valid-type", "no-redef", "var-annotated", "call-overload", "assignment"]
